@startuml

title __PLUGS's Class Diagram__\n

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        abstract class it.unive.dais.legodroid.lib.plugs.AbstractSensor {
            # type : int
            # AbstractSensor()
            # getPercent()
            # getPercent1()
            # getPercent1()
            # getSi()
            # getSi1()
            # getSi1()
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        class it.unive.dais.legodroid.lib.plugs.GyroSensor {
            + GyroSensor()
            + getAngle()
            + getRate()
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        class it.unive.dais.legodroid.lib.plugs.LightSensor {
            + LightSensor()
            + getAmbient()
            + getColor()
            + getReflected()
            + getRgb()
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        enum Color {
          BLACK
          BLUE
          BROWN
          GREEN
          RED
          TRANSPARENT
          WHITE
          YELLOW
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        class it.unive.dais.legodroid.lib.plugs.LightSensor.Rgb {
            + B : int
            + G : int
            + R : int
            + Rgb()
            + toARGB32()
            + toRGB24()
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        abstract class it.unive.dais.legodroid.lib.plugs.Plug {
            + toString()
            # Plug()
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        class it.unive.dais.legodroid.lib.plugs.TachoMotor {
            {static} - TAG : String
            + TachoMotor()
            + brake()
            + clearCount()
            + close()
            + getPosition()
            + getSpeed()
            + isBusy()
            + resetPosition()
            + setPolarity()
            + setPower()
            + setSpeed()
            + setStepPower()
            + setStepSpeed()
            + setStepSync()
            + setTimePower()
            + setTimeSpeed()
            + setTimeSync()
            + setType()
            + start()
            + stop()
            + waitCompletion()
            + waitUntilReady()
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        enum Polarity {
          BACKWARDS
          FORWARD
          OPPOSITE
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        enum Type {
          LARGE
          MEDIUM
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        class it.unive.dais.legodroid.lib.plugs.TouchSensor {
            + TouchSensor()
            + getPressed()
        }
      }
    }
  }
  

  namespace it.unive.dais.legodroid {
    namespace lib {
      namespace plugs {
        class it.unive.dais.legodroid.lib.plugs.UltrasonicSensor {
            + UltrasonicSensor()
            + getDistance()
        }
      }
    }
  }
  
  left to right direction
  it.unive.dais.legodroid.lib.plugs.AbstractSensor -up-|> it.unive.dais.legodroid.lib.plugs.Plug
  it.unive.dais.legodroid.lib.plugs.GyroSensor -up-|> it.unive.dais.legodroid.lib.plugs.AbstractSensor
  it.unive.dais.legodroid.lib.plugs.LightSensor -up-|> it.unive.dais.legodroid.lib.plugs.AbstractSensor
  it.unive.dais.legodroid.lib.plugs.LightSensor +-down- it.unive.dais.legodroid.lib.plugs.LightSensor.Color
  it.unive.dais.legodroid.lib.plugs.LightSensor +-down- it.unive.dais.legodroid.lib.plugs.LightSensor.Rgb
  it.unive.dais.legodroid.lib.plugs.Plug o-- it.unive.dais.legodroid.lib.EV3.Api : api
  it.unive.dais.legodroid.lib.plugs.Plug o-- Port : port
  it.unive.dais.legodroid.lib.plugs.TachoMotor .up.|> java.lang.AutoCloseable
  it.unive.dais.legodroid.lib.plugs.TachoMotor -up-|> it.unive.dais.legodroid.lib.plugs.Plug
  it.unive.dais.legodroid.lib.plugs.TachoMotor +-down- it.unive.dais.legodroid.lib.plugs.TachoMotor.Polarity
  it.unive.dais.legodroid.lib.plugs.TachoMotor +-down- it.unive.dais.legodroid.lib.plugs.TachoMotor.Type
  it.unive.dais.legodroid.lib.plugs.TouchSensor -up-|> it.unive.dais.legodroid.lib.plugs.AbstractSensor
  it.unive.dais.legodroid.lib.plugs.UltrasonicSensor -up-|> it.unive.dais.legodroid.lib.plugs.AbstractSensor



@enduml
